changing to thin jar